manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "azkub01-230a"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "azkub01-230a"
  template:
    metadata:
      labels:
        app: "azkub01-230a"
    spec:
      containers:
        - name: "azkub01-230a"
          image: "az2gcloudcont.azurecr.io/azkub01"
          ports:
          - containerPort: 8080
