manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "azkub01-230a"
    labels:
        app: "azkub01-230a"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: git-kub-clus01-azkub01-230a.2cda881d00c045118573.centralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "azkub01-230a"
                servicePort: 8080
